--- a/config/config_baseModel.yml
+++ b/config/config_baseModel.yml
@@ -1,5 +1,7 @@
 log:
   name: "Health_photo_voltaic_systems"
+  experiment_name: 'solar_basicCnn_v00'
+  log_dir: '/home/baha/codes/solar_data/InfraredSolarModules'
   frequency:
     iteration: 1
   root:
@@ -18,6 +20,7 @@ data:
   num_workers: 3
 
 
+
   preprocessing:
     mean: 0.47684264
     std: 0.26336077
@@ -29,14 +32,14 @@ train:
 
   optim:
     method: SGD
-    lr: 0.01
+    lr: 0.1
     weight_decay: 0.0001
     momentum: 0.9
 
 
 scheduler:
   method: MultiStepLR
-  step_size: [50, 75]
+  step_size: [25, 50]
   gamma: 0.1
 
 ##############
