--- a/config/config_baseModel.yml
+++ b/config/config_baseModel.yml
@@ -16,8 +16,8 @@ checkpoint:
 data:
   train_dir: '/home/baha/codes/solar_data/InfraredSolarModules/train'
   val_dir: '/home/baha/codes/solar_data/InfraredSolarModules/val'
-  batch_size: 64
-  num_workers: 16
+  batch_size: 32
+  num_workers: 8
 
 
 
@@ -37,7 +37,7 @@ train:
     momentum: 0.9
 
   model:
-    model_name: cnn
+    model_name: resnet20
 
 
 scheduler:
