--- a/config/config_baseModel_colab.yml
+++ b/config/config_baseModel_colab.yml
@@ -17,7 +17,7 @@ data:
   train_dir: '/content/gdrive/MyDrive/Colab_Notebooks/jua_solar/solar_data/InfraredSolarModules/train'
   val_dir: '/content/gdrive/MyDrive/Colab_Notebooks/jua_solar/solar_data/InfraredSolarModules/val'
   batch_size: 256
-  num_workers: 16
+  num_workers: 32
 
 
 
@@ -37,7 +37,7 @@ train:
     momentum: 0.9
 
   model:
-    model_name: resnet20
+    model_name: cnn
 
 
 scheduler:
