--- a/config/config_baseModel.yml
+++ b/config/config_baseModel.yml
@@ -37,7 +37,8 @@ train:
     momentum: 0.9
 
   model:
-    model_name: cnn
+    model_name: resnet20  # cnn
+    prtrained: 'cifar100'
 
 
 scheduler:
