--- a/config/config_baseModel_colab.yml
+++ b/config/config_baseModel_colab.yml
@@ -26,7 +26,7 @@ data:
     std: 0.15099779
 
 train:
-  epoch: 100
+  epoch: 200
   loss:
   weight: null
 
@@ -43,5 +43,5 @@ train:
 
 scheduler:
   method: MultiStepLR
-  step_size: [30, 60, 90]
+  step_size: [50, 100, 150]  # [30, 60, 90]
   gamma: 0.1
