--- a/config/config_baseModel_colab.yml
+++ b/config/config_baseModel_colab.yml
@@ -37,8 +37,8 @@ train:
     momentum: 0.9
 
   model:
-    model_name: densenet  # cnn
-    prtrained: 'cifar100'
+    model_name: densenet  # cnn, resnet20, resnet32
+    prtrained: 'cifar100' #cifar10, null
 
 
 scheduler:
